@@ -2,17 +2,17 @@ Package: kfreebsd-image-@version@-@abiname@-@flavor@
 Architecture: any-@arch@
 Depends: ${misc:Depends},
  freebsd-utils (>= 8.1-5) [kfreebsd-any], kldutils (>= 7.1) [kfreebsd-any],
- devd | freebsd-utils (<< 8.2+ds2-9),
+ devd [kfreebsd-any] | freebsd-utils (<< 8.2+ds2-9) [kfreebsd-any],
 # Policy-conformant keyboard mappings (see #605777)
- kbdcontrol (>= 8.2+ds2-6),
+ kbdcontrol (>= 8.2+ds2-6) [kfreebsd-any],
 Conflicts: kfreebsd-loader (<< 5.4-1.3)
 # grub-probe versions prior to ada(4) support break postinst
-Breaks: grub-common (<< 1.98+20100804-14+squeeze1),
+Breaks: grub-common (<< 1.98+20100804-14+squeeze1) [kfreebsd-any],
 # AT_* macros break LD_PRELOAD (see #630695)
 # Missing support for RFTSIGZMB (see 007_clone_signals.diff)
- libc0.1 (<< 2.13-11),
+ libc0.1 (<< 2.13-11) [kfreebsd-any],
 # Require ZFS v28 userland
- zfsutils (<< 8.3~),
+ zfsutils (<< 8.3~) [kfreebsd-any],
 Provides: kfreebsd-image-@major@, kfreebsd-image
 Recommends: @recommends@
 Description: kernel of FreeBSD @version@ image
