@@ -24,7 +24,7 @@ Description: source code for kernel of FreeBSD @version@ with Debian patches
  a GNU/kFreeBSD system.
 
 Package: kfreebsd-headers-@version@-@abiname@
-Architecture: kfreebsd-any
+Architecture: any
 Depends: ${misc:Depends}
 Description: Common architecture-specific header files for kernel of FreeBSD @version@
  This package provides the architecture-specific common kernel header files for
