@@ -2,8 +2,9 @@ kfreebsd-10 (10.0~svn227111-3) UNRELEASED; urgency=low
 
   * Mark kfreebsd-headers-@version@-@abiname@ as kfreebsd-any.
   * Depend on package providing devd.
+  * Fix installability problem on non-kfreebsd platforms.
 
- -- Robert Millan <rmh@debian.org>  Tue, 08 Nov 2011 21:52:39 +0100
+ -- Robert Millan <rmh@debian.org>  Thu, 17 Nov 2011 21:24:41 +0100
 
 kfreebsd-10 (10.0~svn227111-2) experimental; urgency=low
 
